# Fukutsu-COBOL

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  call_wasm.js  client.sh  index.html
.github/workflows/: ci.yml
client-generator/: CHANGELOG.md  README.md  fukutsu-cobol-client-generator.cabal  package.yaml  stack.yaml
client-generator/app/: Main.hs
client-generator/src/: Lib.hs
grpc/: fcbl-core.proto
grpc/web-client/: .gitignore  buf.gen.yaml  package.json
grpc/web-client/cb_lib/: lib.ts
grpc/web-client/pages/: index.tsx
src/: abstract_code.rs  data.rs  gen_abstract_code.rs  gen_code.rs  lib.rs  main.rs  parser.lalrpop  test.rs
src/data/: ast.rs  data.rs  test.rs  tree.rs
src/gen_code/: js.rs  target.rs
src/grpc/: main.rs
test/: hello.cbl
test/www/: index.js  package-lock.json  package.json
user_lib/: fcbl_lib.js
web/: index.html  script.js  styles.css
