[package]
name = "fukutsu-cobol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
regex = "1"
wasm-bindgen = "0.2.84"
lazy_static = "1.4.0"

[build-dependencies]
lalrpop = "0.19.7"
