[package]
name = "fukutsu-cobol"
version = "0.0.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
wasm-bindgen = "0.2.84"
nonempty = "0.8.1"
do-notation = "0.1.3"
rustop = "1.1.2"
tonic-web = "0.9.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tower-http = { version = "0.4.0", features = ["full"] }
tonic = "0.9.0"
prost = "0.11.0"
prost-derive = "0.11.0"
log = "0.4.17"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
lalrpop = "0.19.7"
tonic-build = "0.9.0"


[[bin]]
name = "fcbl"
path = "src/main.rs"
